# Essential-Workflow-Services

./: .env  README.md  frontend-collaboration-integration.md  pyproject.toml  requirements.txt
app/: main.py
app/auth/: dependencies.py
app/codebase/: comments.py  dashboards.py  features.py  n8n_operations.py  widget_locking.py
app/core/: config.py  database.py  enums.py  logging.py
app/dbmodels/: activity_log.py  comment_models.py  dashboard_models.py  features_models.py  n8n_models.py  widget_locking_models.py
app/monitoring/: __init__.py  observability.py
app/n8n_samples/: async_wrapper_usage.md  n8n_apis.json  n8n_working_code.py  test_async_wrapper.py
app/routers/: comment_routers.py  dashboard_routers.py  feature_routers.py  internal_router.py  n8n_workflows_router.py  widget_locking_router.py
app/schemas/: comments_schema.py  dashboards_schema.py  features_schema.py  n8n_schema.py  widget_locking_schemas.py
app/services/: comment_service.py  dashboard_service.py  features_service.py  n8n_operations_service.py  n8n_service.py  permission_service.py  session_cleanup_service.py  widget_locking_service.py
app/tests/: README.md  test_features.py
app/utils/: cache.py
